--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "author": "Ziad Saab <ziad.saab@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^0.8.6",
+    "bcrypt": "^0.8.7",
     "bcrypt-as-promised": "^1.1.0",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^4.0.0",
+    "express": "^4.15.3",
+    "lodash": "^4.17.4",
     "promise-mysql": "^3.0.1"
   }
 }
