--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "bcrypt": "^0.8.7",
     "bcrypt-as-promised": "^1.1.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.17.2",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "lodash": "^4.17.4",
-    "promise-mysql": "^3.0.1"
+    "promise-mysql": "^3.0.1",
+    "pug": "^2.0.0-rc.2"
   }
 }
